<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mytweet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email_tweet_button">Email Tweet via</string>
    <string name="select_contact_button">Select Contact</string>
    <string name="letterCounter">140</string>
    
    <string name="tweetButton">Tweet</string>
    <string name="tweet_hint">Enter your Tweet-Text here!</string>
    <string name="tweetDate">Oct 24, 2014 8:32:24 AM</string>   
    <string name="tweetText">tweetText</string>
    <string name="tweeting">Tweeting</string>
    <string name="delete_tweet">Delete Tweet</string>
    <string name="tweet_report_no_contact">No Contact</string>
    <string name="tweet_report_prospective_recipient">The recipient is %s.</string>
    <string name="tweet_subject">Tweet subject</string>
    <string name="tweet_email_prospective_recipient">%s</string>
    
    <string name="timeline">Timeline</string>
    <string name="settings">Settings</string>
    <string name="clear">Clear</string>
    
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="refresh_interval">Refresh Interval</string>
    <string name="username_summary">What\'s your username?</string>
    <string name="password_summary">How do you log in?</string>
    <string name="refresh_summary">How frequently should data refresh?</string>

</resources>