<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mytweet.MainTweetActivity" >

    <Button
        android:id="@+id/email_tweet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/email_tweet_button" />

    <Button
        android:id="@+id/select_contact_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_tweet_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/select_contact_button" />

    <Button
        android:id="@+id/tweetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/tweetButton" />

    <TextView
        android:id="@+id/letterCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letterCounter" />

    <TextView
        android:id="@+id/tweetDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/select_contact_button"
        android:layout_centerHorizontal="true"
        android:text="@string/tweetDate" />

    <EditText
        android:id="@+id/tweetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tweetDate"
        android:layout_alignLeft="@+id/select_contact_button"
        android:layout_alignRight="@+id/tweetButton"
        android:layout_below="@+id/tweetButton"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/tweet_hint"
        android:inputType="textMultiLine"
        android:maxLength="140" >

        <requestFocus />
    </EditText>

</RelativeLayout>